--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -13,7 +13,11 @@ clap = { version = "4.5.53", features = ["derive", "env"] }
 client-http = { path = "../client-http" }
 futures = "0.3.31"
 network-v1-http = { path = "../network-v1-http" }
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias", "serde_json"] }
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = [
+  "serde",
+  "type-alias",
+  "serde_json",
+] }
 openraft-rocksstore = { path = "../rocksstore" }
 reqwest = { version = "0.12", features = ["json"] }
 rocksdb = "0.24.0"
@@ -26,4 +30,3 @@ tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 [dev-dependencies]
 maplit = "1.0.2"
 tempfile = { version = "3.23.0" }
-
