--- a/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+axum = { version = "0.8.7", features = ["json"] }
 clap = { version = "4.5.53", features = ["derive"] }
 futures = "0.3.31"
 libp2p = { version = "0.56", features = [
@@ -25,8 +26,11 @@ openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f698
 ] }
 openraft-rocksstore = { path = "../rocksstore" }
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 tokio = { version = "1.48", default-features = false, features = [
+  "io-util",
   "macros",
+  "net",
   "rt-multi-thread",
   "sync",
   "time",
