update http config

--- a/openraft_workspace_example/libp2p_openraft_rocksdb/.env-example
+++ b/openraft_workspace_example/libp2p_openraft_rocksdb/.env-example
@@ -4,3 +4,7 @@ LIBP2P_SELF_NAME=node1
 LIBP2P_BOOTSTRAP_NAME=node2
 # Shared DB root for all nodes.
 DB_ROOT=/tmp/libp2p_openraft_rocksdb_demo/cluster
+# Axum HTTP listen addresses for each node.
+NODE1_HTTP=127.0.0.1:3001
+NODE2_HTTP=127.0.0.1:3002
+NODE3_HTTP=127.0.0.1:3003
