--- a/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+async-trait = "0.1.89"
 axum = { version = "0.8.7", features = ["json"] }
 clap = { version = "4.5.53", features = ["derive"] }
 futures = "0.3.31"
@@ -25,6 +26,7 @@ openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f698
   "type-alias",
 ] }
 openraft-rocksstore = { path = "../rocksstore" }
+prost = "0.14.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48", default-features = false, features = [
