--- a/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
@@ -39,6 +39,7 @@ tokio = { version = "1.48", default-features = false, features = [
   "rt-multi-thread",
   "sync",
   "time",
+  "signal",
 ] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
