add ping and gossipsub behaviour

--- a/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
@@ -21,6 +21,8 @@ libp2p = { version = "0.56", features = [
   "identify",
   "kad",
   "mdns",
+  "gossipsub",
+  "ping",
   "quic",
 ] }
 openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = [
