--- a/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
@@ -12,6 +12,7 @@ futures = "0.3.31"
 libp2p = { version = "0.56", features = [
   "tokio",
   "tcp",
+  "dns",
   "noise",
   "tls",
   "yamux",
@@ -24,6 +25,7 @@ libp2p = { version = "0.56", features = [
   "gossipsub",
   "ping",
   "quic",
+  "websocket",
 ] }
 openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = [
   "serde",
