--- a/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/libp2p_openraft_rocksdb/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 async-trait = "0.1.89"
-axum = { version = "0.8.7", features = ["json"] }
+axum = { version = "0.8.8", features = ["json"] }
 clap = { version = "4.5.53", features = ["derive"] }
 futures = "0.3.31"
 kameo = { version = "0.19.2", features = ["remote"] }
@@ -35,9 +35,10 @@ openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f698
 ] }
 openraft-rocksstore-crud = { path = "../rocksstore_crud" }
 prost = "0.14.1"
+rand = "0.9"
 rocksdb = "0.24.0"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
+serde_json = "1.0.148"
 tokio = { version = "1.48", default-features = false, features = [
   "io-util",
   "macros",
