--- a/axum_workspace_example/axum_bcrypt_auth_example/Cargo.toml
+++ b/axum_workspace_example/axum_bcrypt_auth_example/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 axum = "0.8.8"
 bcrypt = "0.17.1"
 chrono = { version = "0.4.42", features = ["serde"] }
-jsonwebtoken = "10.2.0"
+jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
