--- a/openraft_workspace_example/rocksstore/Cargo.toml
+++ b/openraft_workspace_example/rocksstore/Cargo.toml
@@ -21,20 +21,13 @@ bt = ["openraft/bt"]
 [dependencies]
 byteorder = "1.5.0"
 futures = "0.3.31"
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = ["serde", "type-alias"] }
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "52a0cf54115e0f8fb17dfe38148b4176957b825b", features = ["serde", "type-alias"] }
+types-kv = { path = "../types-kv" }
 rand = "0.9"
 rocksdb = "0.24.0"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-tokio = { version = "1.48", default-features = false, features = [
-    "io-util",
-    "macros",
-    "rt",
-    "rt-multi-thread",
-    "sync",
-    "time",
-] }
+serde_json = "1.0.148"
 tracing = { version = "0.1.44" }
 
 [dev-dependencies]
-tempfile = { version = "3.23.0" }
+tempfile = { version = "3.24.0" }
