--- a/openraft_workspace_example/network-v1-http/Cargo.toml
+++ b/openraft_workspace_example/network-v1-http/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 readme = "README.md"
 
 edition = "2024"
-authors = [
-  "drdr xp <drdr.xp@gmail.com>",
-]
+authors = ["drdr xp <drdr.xp@gmail.com>"]
 categories = ["algorithms", "asynchronous", "data-structures"]
 description = "An example network implementation v1 built upon `openraft`."
 homepage = "https://github.com/databendlabs/openraft"
@@ -14,19 +12,20 @@ keywords = ["raft", "consensus", "network"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/databendlabs/openraft"
 
-[dependencies]
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = [
-  "serde",
-  "type-alias",
-] }
-reqwest = { version = "0.12.26", features = ["json"] }
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-tokio = { version = "1.48.0", features = ["full"] }
-tracing = "0.1.44"
+[package.metadata.docs.rs]
+all-features = true
 
 [features]
 default = []
 
-[package.metadata.docs.rs]
-all-features = true
+[dependencies]
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "a90c8414ccc1fb7b2703f244a53e6ed76b83efdd", features = [
+  "serde",
+  "type-alias",
+] }
+openraft-legacy = { git = "https://github.com/databendlabs/openraft", rev = "a90c8414ccc1fb7b2703f244a53e6ed76b83efdd" }
+reqwest = { version = "0.12.28", features = ["json"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
+tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.44"
