--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -13,20 +13,22 @@ clap = { version = "4.5.53", features = ["derive", "env"] }
 client-http = { path = "../client-http" }
 futures = "0.3.31"
 network-v1-http = { path = "../network-v1-http" }
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = [
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "a90c8414ccc1fb7b2703f244a53e6ed76b83efdd", features = [
   "serde",
   "type-alias",
   "serde_json",
 ] }
+openraft-legacy = { git = "https://github.com/databendlabs/openraft", rev = "a90c8414ccc1fb7b2703f244a53e6ed76b83efdd" }
 openraft-rocksstore = { path = "../rocksstore" }
 reqwest = { version = "0.12", features = ["json"] }
 rocksdb = "0.24.0"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
+serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+types-kv            = { path = "../types-kv" }
 
 [dev-dependencies]
 maplit = "1.0.2"
-tempfile = { version = "3.23.0" }
+tempfile = { version = "3.24.0" }
