--- a/openraft_workspace_example/rocksstore_crud/Cargo.toml
+++ b/openraft_workspace_example/rocksstore_crud/Cargo.toml
@@ -21,12 +21,12 @@ bt = ["openraft/bt"]
 [dependencies]
 byteorder = "1.5.0"
 futures = "0.3.31"
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = ["serde", "type-alias"] }
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "a90c8414ccc1fb7b2703f244a53e6ed76b83efdd", features = ["serde", "type-alias"] }
 rand = "0.9"
 rocksdb = "0.24.0"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-tokio = { version = "1.48", default-features = false, features = [
+serde_json = "1.0.148"
+tokio = { version = "1.49", default-features = false, features = [
     "io-util",
     "macros",
     "rt",
@@ -35,6 +35,7 @@ tokio = { version = "1.48", default-features = false, features = [
     "time",
 ] }
 tracing = { version = "0.1.44" }
+types-kv = { path = "../types-kv" }
 
 [dev-dependencies]
-tempfile = { version = "3.23.0" }
+tempfile = { version = "3.24.0" }
