--- a/openraft_workspace_example/multi_raft_kv/Cargo.toml
+++ b/openraft_workspace_example/multi_raft_kv/Cargo.toml
@@ -5,15 +5,15 @@ edition = "2024"
 
 [dependencies]
 futures = "0.3.31"
-mem-log = { path = "../mem-log", features = [] }
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", default-features = false, features = [
+log-mem = { path = "../log-mem", features = [] }
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606", default-features = false, features = [
   "serde",
   "type-alias",
-  "tokio-rt",
 ] }
-openraft-multi = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46" }
+openraft-multi = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606" }
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-tokio = { version = "1.48", default-features = false, features = ["sync"] }
+serde_json = "1.0.148"
+sm-mem = { path = "../sm-mem" }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+types-kv = { path = "../types-kv" }
