--- a/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
@@ -3,23 +3,26 @@ name = "raft_kv_memstore_network_v2"
 version = "0.1.0"
 edition = "2024"
 
+[package.metadata.docs.rs]
+all-features = true
+
+[features]
+
 [dependencies]
 futures = "0.3.31"
+log-mem = { path = "../log-mem", features = [] }
 mem-log = { path = "../mem-log", features = [] }
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = [
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606", features = [
   "serde",
   "type-alias",
 ] }
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-tokio = { version = "1.48", default-features = false, features = ["sync"] }
+serde_json = "1.0.148"
+sm-mem = { path = "../sm-mem" }
+tokio = { version = "1.49.0", features = ["full"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+types-kv = { path = "../types-kv" }
 
 [dev-dependencies]
 maplit = { version = "1.0.2" }
-
-[features]
-
-[package.metadata.docs.rs]
-all-features = true
