--- a/openraft_workspace_example/raft_kv_memstore_singlethreaded/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_singlethreaded/Cargo.toml
@@ -7,9 +7,14 @@ edition = "2024"
 
 [dependencies]
 futures = "0.3.31"
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "singlethreaded", "type-alias"] }
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606", features = [
+  "serde",
+  "single-threaded",
+  "type-alias",
+] }
+openraft-legacy = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606" }
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
+serde_json = "1.0.148"
 tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
