--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -11,16 +11,20 @@ clap = { version = "4.5.53", features = ["derive", "env"] }
 client-http = { path = "../client-http" }
 env_logger = "0.11.8"
 futures = "0.3.31"
+log-mem = { path = "../log-mem" }
 mem-log = { path = "../mem-log" }
 network-v1-http = { path = "../network-v1-http" }
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", features = [
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606", features = [
   "serde",
   "type-alias",
 ] }
+openraft-legacy = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606" }
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
+serde_json = "1.0.148"
+sm-mem = { path = "../sm-mem" }
+tokio = { version = "1.49.0", default-features = false, features = ["sync"] }
 tracing = "0.1.44"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+types-kv = { path = "../types-kv" }
