--- a/openraft_workspace_example/raft_kv_memstore_grpc/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_grpc/Cargo.toml
@@ -8,13 +8,14 @@ bincode = "2.0.0"
 clap = { version = "4.5.53", features = ["derive", "env"] }
 dashmap = "6.1.0"
 futures = "0.3.31"
+log-mem = { path = "../log-mem", features = [] }
 mem-log = { path = "../mem-log" }
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "f9f8c2f6984738783093f9ca197b5d4ef0062e46", default-features = false, features = [
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606", default-features = false, features = [
   "type-alias",
 ] }
 prost = "0.14.1"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
+serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
 tonic = "0.14.2"
 tonic-prost = "0.14.2"
