--- a/openraft_workspace_example/crabcluster/Cargo.toml
+++ b/openraft_workspace_example/crabcluster/Cargo.toml
@@ -28,6 +28,7 @@ openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e
   "serde",
   "type-alias",
 ] }
+openraft-legacy = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606" }
 podman-api = "0.10"
 reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
 # clap_complete = "4"
