--- a/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
+++ b/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
@@ -29,7 +29,8 @@ openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e
   "serde",
   "type-alias",
 ] }
-schemars = { version = "1.2", features = ["uuid1"] }
+openraft-legacy = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606" }
+schemars = { version = "0.9", features = ["uuid1"] }
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
 tokio = { version = "1.49.0", features = [
