--- a/openraft_workspace_example/chitchat_poem_tarpc_rocksdb_example/Cargo.toml
+++ b/openraft_workspace_example/chitchat_poem_tarpc_rocksdb_example/Cargo.toml
@@ -7,25 +7,26 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
-chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606", features = ["serde", "type-alias"]}
+async-trait = "0.1.89"
+byteorder = "1.5.0"
+chitchat = { git = "https://github.com/quickwit-oss/chitchat" }
 clap = { version = "4.5.54", features = ["derive", "env"] }
 console-subscriber = "0.5.0"
 cool-id-generator = "1.0.1"
 env_logger = "0.11.8"
+futures = "0.3.31"
 once_cell = "1.21.3"
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606", features = ["serde", "type-alias"] }
+openraft-legacy = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606" }
+openraft-rocksstore = { path = "../rocksstore" }
 poem = "3.1.12"
 poem-openapi = { version = "5", features = ["swagger-ui"] }
+reqwest = { version = "0.13", features = ["json"] }
+rocksdb = "0.24.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
+tarpc = { version = "0.37.0", features = ["full"] }
+thiserror = "2.0.17"
 tokio = { version = "1.49.0", features = ["full"] }
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
-futures = "0.3.31"
-tarpc = { version = "0.37.0", features = ["full"] }
-byteorder = "1.5.0"
-reqwest = { version = "0.13", features = ["json"] }
-rocksdb = "0.24.0"
-thiserror = "2.0.17"
-async-trait = "0.1.89"
-openraft-rocksstore = { path = "../rocksstore" }
