--- a/axum_workspace_example/axum_aide_example/Cargo.toml
+++ b/axum_workspace_example/axum_aide_example/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-aide = { version = "0.15.1", features = [
+aide = { version = "=0.16.0-alpha.1", features = [
   "redoc",
   "swagger",
   "scalar",
@@ -12,7 +12,7 @@ aide = { version = "0.15.1", features = [
   "macros",
 ] }
 axum = { version = "0.8.8", features = ["macros"] }
-schemars = { version = "0.9.0", features = ["uuid1"] }
+schemars = { version = "1", features = ["uuid1"] }
 serde = { version = "1.0.228", features = ["derive", "rc"] }
 serde_json = "1.0.148"
 tokio = { version = "1.48.0", features = ["full"] }
