--- a/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
+++ b/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 file-logging = []
 
 [dependencies]
-aide = { version = "0.15", features = [
+aide = { version = "=0.16.0-alpha.1", features = [
   "redoc",
   "swagger",
   "scalar",
@@ -30,7 +30,7 @@ openraft = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e
   "type-alias",
 ] }
 openraft-legacy = { git = "https://github.com/databendlabs/openraft", rev = "8d3592cc2e44e12dbdeeb74ae367d042e98af606" }
-schemars = { version = "0.9", features = ["uuid1"] }
+schemars = { version = "1", features = ["uuid1"] }
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
 tokio = { version = "1.49.0", features = [
