--- a/bincode_workspace_example/bincode_example/Cargo.toml
+++ b/bincode_workspace_example/bincode_example/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "bincode_example"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bincode = "1.3.3"
+bincode = "=1.3.3"
 serde = { version = "1.0.204", features = ["derive"] }
