--- a/chitchat_workspace_example/chitchat_axum_example/Cargo.toml
+++ b/chitchat_workspace_example/chitchat_axum_example/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-aide = { version = "0.15", features = [
+aide = { version = "=0.16.0-alpha.1", features = [
   "redoc",
   "swagger",
   "scalar",
@@ -13,14 +13,15 @@ aide = { version = "0.15", features = [
 ] }
 anyhow = "1"
 axum = { version = "0.8", features = ["macros"] }
-chitchat = { git = "https://github.com/quickwit-oss/chitchat" }
-clap = { version = "4.0", features = ["derive"] }
+chitchat = "0.10"
+# chitchat = { git = "https://github.com/quickwit-oss/chitchat" }
+clap = { version = "4.5", features = ["derive"] }
 cool-id-generator = "1"
 itertools = "0.14"
-schemars = { version = "0.9", features = ["uuid1"] }
+schemars = { version = "1.2", features = ["uuid1"] }
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
-tokio = { version = "1.46.1", features = [
+tokio = { version = "1.49.0", features = [
   "net",
   "sync",
   "rt-multi-thread",
@@ -30,7 +31,7 @@ tokio = { version = "1.46.1", features = [
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors"] }
 tracing-subscriber = "0.3"
-uuid = { version = "1.0", features = ["serde", "v4"] }
+uuid = { version = "1.19", features = ["serde", "v4"] }
 
 [dev-dependencies]
 assert_cmd = "2"
