--- a/chitchat_workspace_example/chitchat_example/Cargo.toml
+++ b/chitchat_workspace_example/chitchat_example/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.97"
 # axum = "0.7.2"
-# chitchat = "0.9"
-chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
+chitchat = "0.10"
+#chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
 clap = { version = "4.5.32", features = ["derive"] }
 console-subscriber = "0.4.1"
 cool-id-generator = "1.0.1"
@@ -22,6 +22,5 @@ serde_json = "1.0.140"
 tokio = { version = "1.44.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-
 
 [dev-dependencies]
