--- a/clickhouse_workspace_example/spider_clickhouse_example/Cargo.toml
+++ b/clickhouse_workspace_example/spider_clickhouse_example/Cargo.toml
@@ -4,19 +4,26 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.7"
-clickhouse = { version = "0.14.1", features = ["lz4", "rustls-tls"] }
+axum = "0.8.8"
+clickhouse = { version = "0.14.2", features = ["lz4", "rustls-tls"] }
 dotenvy = "0.15"
 hyper-rustls = { version = "0.27", default-features = true }
 hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
 once_cell = "1.21.3"
-redis = { version = "0.32", features = ["tokio-comp", "cluster-async"] }
-reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "gzip", "brotli", "deflate"] }
+redis = { version = "1.0", features = ["tokio-comp", "cluster-async"] }
+reqwest = { version = "0.12", default-features = false, features = [
+  "rustls-tls",
+  "http2",
+  "charset",
+  "gzip",
+  "brotli",
+  "deflate",
+] }
 rustls = "0.23"
 rustls-native-certs = "0.8"
 rustls-pemfile = "2.2"
-scraper = "0.24.0"
+scraper = "0.25.0"
 serde = { version = "1.0.228", features = ["derive"] }
-spider = "2.38.23"
-tokio = { version = "1.48.0", features = ["full"] }
+spider = "2.39.21"
+tokio = { version = "1.49.0", features = ["full"] }
 url = "2.5"
