--- a/ballista_workspace_example/datafusion_basic/Cargo.toml
+++ b/ballista_workspace_example/datafusion_basic/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-datafusion = "=51"
+ballista = "51.0.0"
 tokio = { version = "1.49.0", features = ["full"] }
