--- a/ballista_workspace_example/Cargo.toml
+++ b/ballista_workspace_example/Cargo.toml
@@ -8,5 +8,7 @@ members = [
   "ballista_examples",
   "standalone_sql",
   "custom_client",
-  "custom_executor", "remote_dataframe",
+  "custom_executor",
+  "remote_dataframe",
+  "remote_sql",
 ]
