--- a/parquet_workspace_example/Cargo.toml
+++ b/parquet_workspace_example/Cargo.toml
@@ -8,5 +8,5 @@ members = [
   "external_metadata",
   "read_parquet",
   "read_with_rowgroup",
-  "write_parquet",
+  "write_parquet", "write_basic_parquet",
 ]
