--- a/parquet_workspace_example/write_basic_parquet/Cargo.toml
+++ b/parquet_workspace_example/write_basic_parquet/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 arrow-array = "57.2.0"
+arrow-schema = "57.2.0"
 bytes = "1.11.0"
+futures = "0.3"
 parquet = { version = "57.2.0", features = ["async"] }
 tokio = { version = "1.49.0", features = ["full"] }
