add http write one typed

--- a/influxdb3_workspace_example/Cargo.toml
+++ b/influxdb3_workspace_example/Cargo.toml
@@ -5,5 +5,5 @@ resolver = "3"
 members = [
   "http_read",
   "http_write_batch_typed",
-  "http_write_one",
+  "http_write_one", "http_write_one_typed",
 ]
