--- a/solana_workspace_example/account_subscribe_example/Cargo.toml
+++ b/solana_workspace_example/account_subscribe_example/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "2.3.3"
-solana-sdk = "2.3.1"
-solana-system-interface = "1.0.0"
-tokio = { version = "1.0", features = ["full"] }
+solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-sdk = "3.0.0"
+solana-system-interface = "3.0.0"
+tokio = { version = "1.49", features = ["full"] }
