--- a/solana_workspace_example/anchor_client_async_example/Cargo.toml
+++ b/solana_workspace_example/anchor_client_async_example/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anchor-client = { version = "0.31.1", features = ["async"] }
+anchor-client = { version = "0.32.1", features = ["async"] }
 anyhow = "1.0"
-solana-client = "2.0.0"
-solana-sdk = "2.0.0"
-tokio = { version = "1.46.1", features = ["full"] }
+solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-sdk = "3.0.0"
+tokio = { version = "1.49.0", features = ["full"] }
