--- a/solana_workspace_example/create_system_account_example/Cargo.toml
+++ b/solana_workspace_example/create_system_account_example/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "2.3.5"
-solana-sdk = "2.3.1"
-solana-system-interface = "1.0.0"
+solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-sdk = "3.0.0"
+solana-system-interface = "3.0.0"
