--- a/solana_workspace_example/solana_compute_budget_instruction_example/Cargo.toml
+++ b/solana_workspace_example/solana_compute_budget_instruction_example/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.98"
-solana-client = "2.3.4"
-solana-sdk = "2.3.1"
-solana-system-interface = "1.0.0"
-tokio = { version = "1.46.1", features = ["full"] }
+anyhow = "1.0.100"
+solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-compute-budget-interface = "3.0.0"
+solana-sdk = "3.0.0"
+solana-system-interface = "3.0.0"
+tokio = { version = "1.49.0", features = ["full"] }
