--- a/solana_workspace_example/solana_get_signatures_for_address_with_config_example/Cargo.toml
+++ b/solana_workspace_example/solana_get_signatures_for_address_with_config_example/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "2.2.0"
-solana-sdk = "2.2.1"
-tokio = { version = "1.43.0", features = ["full"] }
+solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-sdk = "3.0.0"
+tokio = { version = "1.49.0", features = ["full"] }
