--- a/solana_workspace_example/solana_program_entry_client_example/Cargo.toml
+++ b/solana_workspace_example/solana_program_entry_client_example/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-borsh = "1.5.7"
+borsh = "1.6.0"
 dotenvy = "0.15"
 serde_json = "1.0"
-solana-client = "2.3.4"
-solana-program = "2.3.0"
-solana-sdk = "2.3.1"
-solana-sdk-ids = "2.2.1"
+solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-program = "3.0.0"
+solana-sdk = "3.0.0"
+solana-sdk-ids = "3.1.0"
