--- a/solana_workspace_example/solana_raw_integer_client_example/Cargo.toml
+++ b/solana_workspace_example/solana_raw_integer_client_example/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.98"
-borsh = "1.5.7"
-borsh-derive = "1.5.7"
-serde_json = "1.0.140"
-solana-client = "2.3.3"
-solana-sdk = "2.3.1"
-solana-system-interface = "1.0.0"
+anyhow = "1.0.100"
+borsh = "1.6.0"
+borsh-derive = "1.6.0"
+serde_json = "1.0.149"
+solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-sdk = "3.0.0"
+solana-system-interface = "3.0.0"
