--- a/solana_workspace_example/solana_rpc_getblock_example/Cargo.toml
+++ b/solana_workspace_example/solana_rpc_getblock_example/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "2.2.0"
-solana-sdk = "2.2.1"
+solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-sdk = "3.0.0"
