--- a/solana_workspace_example/solana_rust_example/Cargo.toml
+++ b/solana_workspace_example/solana_rust_example/Cargo.toml
@@ -4,17 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.39"
+chrono = "0.4.43"
 envy = "0.4.2"
-flate2 = "1.0.35"
+flate2 = "1.1.9"
 futures-util = "0.3.31"
-serde = "1.0.217"
-serde_json = "1.0.138"
-solana-account-decoder = "2.2.0"
-solana-client = "2.2.0"
-solana-sdk = "2.2.1"
-spl-associated-token-account = "6.0.0"
-spl-token = "7.0.0"
-spl-token-2022 = "7.0.0"
-tokio = "1.43.0"
-url = { version = "2.5.4", features = ["serde"] }
+serde = "1.0.228"
+serde_json = "1.0.149"
+solana-account-decoder = "3.1.8"
+solana-client = "3.1.8"
+solana-sdk = "3.0.0"
+solana-system-interface = "3.0.0"
+spl-associated-token-account = "8.0.0"
+spl-token = "9.0.0"
+spl-token-2022 = "10.0.0"
+tokio = "1.49.0"
+url = { version = "2.5.8", features = ["serde"] }
