--- a/solana_workspace_example/cnft_example/Cargo.toml
+++ b/solana_workspace_example/cnft_example/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 mpl-bubblegum = "2.1.1"
 mpl-token-metadata = "5.1.1"
 solana-client = "3.1.8"
+solana-commitment-config = "3.1.0"
+solana-program-2 = { package = "solana-program", version = "2.3.0" }
 solana-sdk = "3.0.0"
+solana-sdk-ids = "3.1.0"
 spl-account-compression = "1.0"
 spl-noop = "1.0"
