--- a/solana_workspace_example/create_system_account_example/Cargo.toml
+++ b/solana_workspace_example/create_system_account_example/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 solana-client = "3.1.8"
 solana-commitment-config = "3.1.0"
 solana-sdk = "3.0.0"
-solana-system-interface = "3.0.0"
+solana-system-interface = { version = "3.0.0", features = ["bincode"] }
