add bincode feature

--- a/solana_workspace_example/solana_rust_example/Cargo.toml
+++ b/solana_workspace_example/solana_rust_example/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1.0.149"
 solana-account-decoder = "3.1.8"
 solana-client = "3.1.8"
 solana-sdk = "3.0.0"
-solana-system-interface = "3.0.0"
+solana-system-interface = { version = "3.0.0", features = ["bincode"] }
 spl-associated-token-account = "8.0.0"
 spl-token = "9.0.0"
 spl-token-2022 = "10.0.0"
