--- a/solana_workspace_example/solana_compute_budget_instruction_example/Cargo.toml
+++ b/solana_workspace_example/solana_compute_budget_instruction_example/Cargo.toml
@@ -9,5 +9,5 @@ solana-client = "3.1.8"
 solana-commitment-config = "3.1.0"
 solana-compute-budget-interface = "3.0.0"
 solana-sdk = "3.0.0"
-solana-system-interface = "3.0.0"
+solana-system-interface = { version = "3.0.0", features = ["bincode"] }
 tokio = { version = "1.49.0", features = ["full"] }
