--- a/solana_workspace_example/solana_program_entry_example/Cargo.toml
+++ b/solana_workspace_example/solana_program_entry_example/Cargo.toml
@@ -14,4 +14,4 @@ custom-panic = []
 [dependencies]
 borsh = { version = "1.6.0", features = ["derive"] }
 solana-program = "3.0.0"
-solana-system-interface = "3.0.0"
+solana-system-interface = { version = "3.0.0", features = ["bincode"] }
