add solana transaction pool example

--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -27,4 +27,5 @@ members = [
   "solana_explain_transaction_example",
   "solana_compute_budget_instruction_example",
   "create_system_account_example",
+  "solana_transaction_pool_example",
 ]
