--- a/solana_workspace_example/solana_transaction_pool_example/Cargo.toml
+++ b/solana_workspace_example/solana_transaction_pool_example/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.100"
 async-trait = "0.1.88"
 base64 = "0.22.1"
 bincode = "=1.3.3"
+deadpool = "0.12.3"
 once_cell = "1.20.2"
 priority-queue = "2.7.0"
 solana-client = "3.1.8"
