--- a/solana_workspace_example/solana_transaction_pool_example/Cargo.toml
+++ b/solana_workspace_example/solana_transaction_pool_example/Cargo.toml
@@ -9,6 +9,7 @@ async-trait = "0.1.88"
 base64 = "0.22.1"
 bincode = "=1.3.3"
 deadpool = "0.12.3"
+num_cpus = "1.16.0"
 priority-queue = "2.7.0"
 solana-client = "3.1.8"
 solana-commitment-config = "3.1.0"
