update code to compile

--- a/deno_component_workspace_example/deno_node_basic_example/Cargo.toml
+++ b/deno_component_workspace_example/deno_node_basic_example/Cargo.toml
@@ -4,34 +4,32 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-deno_broadcast_channel = "0.207.0"
-deno_cache = "0.145.0"
-deno_canvas = "0.82.0"
-deno_console = "0.213.0"
-deno_core = "0.355.0"
-deno_cron = "0.93.0"
-deno_crypto = "0.227.0"
-deno_fetch = "0.237.0"
-deno_ffi = "0.200.0"
-deno_fs = "0.123.0"
-deno_http = "0.211.0"
-deno_io = "0.123.0"
-deno_kv = "0.121.0"
-deno_napi = "0.144.0"
-deno_net = "0.205.0"
-deno_node = "0.151.0"
-deno_os = "0.30.0"
-deno_permissions = "0.72.0"
-deno_process = "0.28.0"
-deno_telemetry = "0.35.0"
-deno_tls = "0.200.0"
-deno_url = "0.213.0"
-deno_web = "0.244.0"
-deno_webgpu = "0.180.0"
-deno_webidl = "0.213.0"
-deno_websocket = "0.218.0"
-deno_webstorage = "0.208.0"
-node_resolver = "0.51.0"
-sys_traits = { version = "0.1.17", features = ["real"] }
-tokio = { version = "1.47.1", features = ["full"] }
+deno_cache = "0.163.0"
+deno_console = "0.222.0"
+deno_core = "0.383.0"
+deno_cron = "0.110.0"
+deno_crypto = "0.244.0"
+deno_fetch = "0.254.0"
+deno_ffi = "0.217.0"
+deno_fs = "0.140.0"
+deno_http = "0.228.0"
+deno_io = "0.140.0"
+deno_kv = "0.138.0"
+deno_napi = "0.161.0"
+deno_net = "0.222.0"
+deno_node = "0.168.0"
+deno_os = "0.47.0"
+deno_permissions = "0.89.0"
+deno_process = "0.45.0"
+deno_semver = "0.9.1"
+deno_telemetry = "0.52.0"
+deno_tls = "0.217.0"
+deno_web = "0.261.0"
+deno_webgpu = "0.197.0"
+deno_webidl = "0.230.0"
+deno_websocket = "0.235.0"
+deno_webstorage = "0.225.0"
 futures = "0.3"
+node_resolver = "0.68.0"
+sys_traits = { version = "0.1.22", features = ["real"] }
+tokio = { version = "1.49.0", features = ["full"] }
