--- a/deno_component_workspace_example/byonm_npm_resolver_example/Cargo.toml
+++ b/deno_component_workspace_example/byonm_npm_resolver_example/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-deno_package_json = "0.16.0"
-deno_path_util = "0.1.0"
-deno_resolver = "0.45.0"
-deno_semver = "0.9.0"
-node_resolver = "0.52.0"
-sys_traits = { version = "0.1.17", features = ["real"] }
-tokio = { version = "1.0", features = ["full"] }
-url = "2.5.7"
+deno_maybe_sync = "0.17.0"
+deno_package_json = "0.32.0"
+deno_path_util = "0.6.4"
+deno_resolver = "0.61.0"
+deno_semver = "0.9.1"
+node_resolver = "0.68.0"
+sys_traits = { version = "0.1.22", features = ["real"] }
+tokio = { version = "1.49", features = ["full"] }
+url = "2.5.8"
