--- a/deno_component_workspace_example/deno_core_download_example/Cargo.toml
+++ b/deno_component_workspace_example/deno_core_download_example/Cargo.toml
@@ -3,34 +3,33 @@ name = "deno_core_download_example"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
-anyhow = "1.0.99"
-base64 = "0.22.1"
-dirs = "6.0.0"
-flate2 = "1.1.2"
-futures = "0.3.31"
-reqwest = { version = "0.12.23", features = [
-  "json",
-  "rustls-tls",
-], default-features = false }
-semver = "1.0.26"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.142"
-sha2 = "0.10.9"
-tar = "0.4"
-tempfile = "3.20.0"
-thiserror = "2.0.14"
-tokio = { version = "1.47.1", features = ["full"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-url = "2.5.4"
-
-[dev-dependencies]
-tokio-test = "0.4.4"
-
 [[bin]]
 name = "npm_demo"
 path = "src/main.rs"
+
+[dependencies]
+anyhow = "1.0.101"
+base64 = "0.22.1"
+dirs = "6.0.0"
+flate2 = "1.1.9"
+futures = "0.3.31"
+reqwest = { version = "0.12.5", features = [
+  "json"
+], default-features = false }
+semver = "1.0.27"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+sha2 = "0.10.9"
+tar = "0.4"
+tempfile = "3.24.0"
+thiserror = "2.0.18"
+tokio = { version = "1.49.0", features = ["full"] }
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+url = "2.5.8"
+
+[dev-dependencies]
+tokio-test = "0.4.5"
 
 [[example]]
 name = "download_supabase"
