--- a/deno_component_workspace_example/deno_lib_libmainworker_example/Cargo.toml
+++ b/deno_component_workspace_example/deno_lib_libmainworker_example/Cargo.toml
@@ -3,99 +3,6 @@ name = "deno_lib_libmainworker_example"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
-anyhow = "1.0"
-async-trait = "0.1.89"
-aws-lc-rs = "1.13.3"
-base64 = "0.22.1"
-bincode = "2.0.1"
-boxed_error = "0.2.3"
-bytes = "1.10.1"
-chrono = "0.4.41"
-clap = "4.5.45"
-clap_complete = "4.5.57"
-clap_complete_fig = "4.5.2"
-color-print = "0.3.7"
-console_static_text = "0.8.3"
-crossterm = "0.29.0"
-dashmap = "6.1.0"
-deno_ast = "0.49.0"
-deno_core = "0.355.0"
-deno_error = "0.7.0"
-deno_graph = "0.99.0"
-deno_lib = "0.32.0"
-deno_npm = "0.38.0"
-deno_path_util = "0.4.0"
-deno_permissions = "0.73.0"
-deno_resolver = { version = "0.45.0", features = ["deno_ast", "graph", "sync"] }
-deno_runtime = { version = "0.222.0", features = ["include_js_files_for_snapshotting"] }
-deno_semver = "0.9.0"
-deno_snapshots = "0.29.0"
-dotenvy = "0.15.7"
-dprint-core = "0.67.4"
-dprint-plugin-json = "0.20.0"
-dprint-plugin-jupyter = "0.2.0"
-dprint-plugin-markdown = "0.19.0"
-dprint-plugin-typescript = "0.95.9"
-env_logger = "0.11.0"
-esbuild_client = "0.5.0"
-eszip = "0.97.0"
-faster-hex = "0.10.0"
-flate2 = "1.1.2"
-http = "1.0"
-http-body = "1.0.1"
-http-body-util = "0.1.2"
-import_map = "0.23.0"
-indexmap = "2.10.0"
-jsonc-parser = { version = "0.26.3", features = ["cst"] }
-jupyter-protocol = "0.8.1"
-jupyter_runtime = { package = "runtimelib", version = "0.28.0", features = ["tokio-runtime"] }
-keyring = "3.6.3"
-lazy-regex = "3.4.1"
-libc = "0.2.175"
-log = "0.4.27"
-malva = "0.14.1"
-markup_fmt = "0.23.1"
-memchr = "2.7.5"
-nix = "0.30.1"
-node_resolver = "0.52.0"
-notify = "8.2.0"
-once_cell = "1.21.3"
-open = "5.3.2"
-p256 = "0.13.2"
-pathdiff = "0.2.3"
-percent-encoding = "2.3.1"
-phf = { version = "0.12.1", features = ["macros"] }
-pretty_yaml = "0.5.1"
-quick-junit = "0.5.1"
-rand = "0.9.2"
-regex = "1.11.1"
-rustc-hash = "2.1.1"
-rustyline = "17.0.0"
-rustyline-derive = "0.11.1"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0"
-sha2 = "0.10.9"
-shell-escape = "0.1.5"
-spki = "0.7.3"
-sqlformat = "0.3.5"
-strsim = "0.11.1"
-sys_traits = { version = "0.1.17", features = ["memory", "real"] }
-tar = "0.4"
-tempfile = "3.20.0"
-text-size = "1.1.1"
-text_lines = "0.6.0"
-thiserror = "2.0.15"
-tokio = { version = "1.45.1", features = ["full"] }
-tokio-util = "0.7.16"
-typed-arena = "2.0.2"
-unicode-width = "0.2.1"
-url = "2.5.4"
-uuid = "1.18.0"
-walkdir = "2.5.0"
-zip = "4.3.0"
-zstd = "0.13.3"
-
 [[bin]]
 name = "npm_example"
 path = "src/npm_example.rs"
@@ -115,3 +22,96 @@ path = "src/integrated_loader_example.rs"
 [[bin]]
 name = "simple_cli_example"
 path = "src/simple_cli_example.rs"
+
+[dependencies]
+anyhow = "1.0"
+async-trait = "0.1.89"
+aws-lc-rs = "1.15.4"
+base64 = "0.22.1"
+bincode = "=1.3.3"
+boxed_error = "0.2.3"
+bytes = "1.11.1"
+chrono = "0.4.43"
+clap = "4.5.47"
+clap_complete = "4.5.47"
+clap_complete_fig = "4.5.2"
+color-print = "0.3.7"
+console_static_text = "0.8.3"
+crossterm = "0.29.0"
+dashmap = "6.1.0"
+deno_ast = "0.52.0"
+deno_core = "0.383.0"
+deno_error = "0.7.1"
+deno_graph = "=0.106.0"
+deno_lib = "0.48.0"
+deno_npm = "0.43.0"
+deno_path_util = "0.6.4"
+deno_permissions = "0.89.0"
+deno_resolver = { version = "0.61.0", features = ["deno_ast", "graph", "sync"] }
+deno_runtime = { version = "0.238.0", features = ["include_js_files_for_snapshotting"] }
+deno_semver = "0.9.1"
+deno_snapshots = "0.45.0"
+dotenvy = "0.15.7"
+dprint-core = "0.67.4"
+dprint-plugin-json = "0.21.0"
+dprint-plugin-jupyter = "0.2.1"
+dprint-plugin-markdown = "=0.20.0"
+dprint-plugin-typescript = "=0.95.13"
+env_logger = "=0.11.6"
+esbuild_client = "0.7.1"
+eszip = "=0.108.0"
+faster-hex = "0.10.0"
+flate2 = "1.1.9"
+http = "1.4"
+http-body = "1.0.1"
+http-body-util = "0.1.3"
+import_map = "0.25.0"
+indexmap = "2.13.0"
+jsonc-parser = { version = "0.29.0", features = ["cst"] }
+jupyter-protocol = "=0.8.0"
+jupyter_runtime = { package = "runtimelib", version = "=0.28.0", default-features = false, features = ["tokio-runtime", "aws-lc-rs"] }
+keyring = "3.6.3"
+lazy-regex = "3.5.1"
+libc = "0.2.180"
+log = "0.4.29"
+malva = "=0.12.1"
+markup_fmt = "=0.22.0"
+memchr = "2.7.6"
+nix = "=0.27.1"
+node_resolver = "0.68.0"
+notify = "=6.1.1"
+once_cell = "1.21.3"
+open = "5.3.3"
+p256 = "0.13.2"
+pathdiff = "0.2.3"
+percent-encoding = "2.3.2"
+phf = { version = "=0.11", features = ["macros"] }
+pretty_yaml = "=0.5.0"
+quick-junit = "=0.3.6"
+rand = { version = "=0.8.5", features = ["small_rng"] }
+regex = "1.12.3"
+rustc-hash = "2.1.1"
+rustyline = "=13.0.0"
+rustyline-derive = "=0.7.0"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0"
+sha2 = "0.10.9"
+shell-escape = "0.1.5"
+spki = "0.7.1"
+sqlformat = "=0.3.5"
+strsim = "0.11.1"
+sys_traits = { version = "0.1.22", features = ["memory", "real"] }
+tar = "0.4"
+tempfile = "3.24.0"
+text-size = "1.1.1"
+text_lines = "0.6.0"
+thiserror = "2.0.18"
+tokio = { version = "1.49.0", features = ["full"] }
+tokio-util = "0.7.18"
+typed-arena = "2.0.2"
+unicode-width = "0.2.2"
+url = "2.5.8"
+uuid = "1.20.0"
+walkdir = "2.5.0"
+zip = { version = "=2.4.1", default-features = false, features = ["flate2"] }
+zstd = "0.13.3"
