--- a/deno_component_workspace_example/deno_resolver_deno_npm_example/Cargo.toml
+++ b/deno_component_workspace_example/deno_resolver_deno_npm_example/Cargo.toml
@@ -7,43 +7,44 @@ edition = "2024"
 anyhow = "1"
 async-trait = "0.1"
 base64 = "0.22.1"
-colored = "3.0.0"
+colored = "=2.2.0"
 dashmap = "6.1"
-deno_ast = { version = "0.49.0", features = ["transpiling"] }
-deno_core = "0.355.0"
-deno_error = "0.7.0"
-deno_graph = "0.99.0"
-deno_lib = "0.31.0"
-deno_napi = "0.144.0"
-deno_node = "0.151.0"
-deno_npm = "0.37.0"
-deno_npm_cache = "0.32.0"
-deno_npm_installer = "0.8.0"
-deno_package_json = "0.15.0"
-deno_resolver = "0.44.0"
-deno_runtime = { version = "0.221.0", features = ["transpile"] }
-deno_semver = "0.9.0"
-deno_task_shell = "0.26.1"
+deno_ast = { version = "0.52.0", features = ["transpiling"] }
+deno_core = "0.383.0"
+deno_error = "0.7.1"
+deno_graph = "0.106.0"
+deno_lib = "0.48.0"
+deno_napi = "0.161.0"
+deno_node = "0.168.0"
+deno_npm = "0.43.0"
+deno_npm_cache = "0.49.0"
+deno_npm_installer = "0.25.0"
+deno_package_json = "0.32.0"
+deno_permissions = "0.89.0"
+deno_resolver = "0.61.0"
+deno_runtime = { version = "0.238.0", features = ["transpile"] }
+deno_semver = "0.9.1"
+deno_task_shell = "0.28.0"
 dirs = "6.0.0"
-eszip = "0.97.0"
+eszip = "0.108.0"
 flate2 = "1.1"
 futures = "0.3"
 hex = "0.4"
-http = "1.3"
+http = "1.4"
 log = "0.4"
-sha1 = "0.10"
-node_resolver = "0.51.0"
-reqwest = { version = "0.12.23", features = ["json"] }
+node_resolver = "0.68.0"
+reqwest = { version = "0.12.5", features = ["json"] }
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sha1 = "0.10"
 sha2 = "0.10"
-sys_traits = "0.1.17"
+sys_traits = "0.1.22"
 tar = "0.4"
 thiserror = "2.0"
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.49.0", features = ["full"] }
 tokio-util = "0.7"
 tracing = "0.1"
-ureq = "3.0.12"
-url = "2.5.4"
+ureq = "=3.1.4"
+url = "2.5.8"
 urlencoding = "2.1"
