--- a/deno_component_workspace_example/deno_runtime_axum_example/Cargo.toml
+++ b/deno_component_workspace_example/deno_runtime_axum_example/Cargo.toml
@@ -4,24 +4,24 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.99"
+anyhow = "1.0.101"
 async-trait = "0.1"
 axum = { version = "0.8", features = ["macros"] }
-deno_ast = { version = "0.49.0", features = ["transpiling"] }
-deno_cache_dir = "0.25.0"
-deno_crypto = "0.227.0"
-deno_error = "0.7.0"
-deno_resolver = "0.44.0"
-deno_runtime = { version = "0.221.0", features = ["transpile", "hmr"] }
-deno_terminal = "0.2.2"
+deno_ast = { version = "0.53.0", features = ["transpiling"] }
+deno_cache_dir = "0.27.0"
+deno_crypto = "0.244.0"
+deno_error = "0.7.1"
+deno_resolver = "0.61.0"
+deno_runtime = { version = "0.238.0", features = ["transpile", "hmr"] }
+deno_terminal = "0.2.3"
 dotenvy = "0.15.7"
 env_logger = "0.11"
-log = "0.4.27"
+log = "0.4.29"
 rand = "0.9"
 rustls = "0.23"
 serde_json = "1.0"
-sys_traits = { version = "0.1.17", features = ["real"] }
-tokio = { version = "1.47.1", features = ["full"] }
-ureq = "3.0.12"
-url = "2.5.4"
+sys_traits = { version = "0.1.22", features = ["real"] }
+tokio = { version = "1.49.0", features = ["full"] }
+ureq = "=3.1.4"
+url = "2.5.8"
 urlencoding = "2.1.3"
