--- a/deno_component_workspace_example/deno_runtime_call_typescript_example/Cargo.toml
+++ b/deno_component_workspace_example/deno_runtime_call_typescript_example/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-deno_ast = { version = "0.49.0", features = ["transpiling"] }
-deno_core = "0.355.0"
-deno_error = "0.7.0"
+deno_ast = { version = "0.53.0", features = ["transpiling"] }
+deno_core = "0.383.0"
+deno_error = "0.7.1"
 # deno_fs = "0.122.0"
 # deno_permissions = "0.71.0"
-deno_resolver = "0.44.0"
-deno_runtime = { version = "0.221.0", features = ["transpile"] }
-sys_traits = "0.1.17"
-tokio = { version = "1.47.1", features = ["full"] }
-ureq = "3.0.12"
+deno_resolver = "0.61.0"
+deno_runtime = { version = "0.238.0", features = ["transpile"] }
+sys_traits = "0.1.22"
+tokio = { version = "1.49.0", features = ["full"] }
+ureq = "=3.1.4"
