add deno_fetch example code

--- a/deno_component_workspace_example/Cargo.toml
+++ b/deno_component_workspace_example/Cargo.toml
@@ -36,6 +36,7 @@ members = [
   "deno_cache_dir_example",
   "deno_core_call_js_example",
   "deno_core_call_js_function_example",
+  "deno_fetch_example",
   "denort",
   "deno",
   "embed_deno",
