add lib mainworker duplex stream example

--- a/deno_component_workspace_example/Cargo.toml
+++ b/deno_component_workspace_example/Cargo.toml
@@ -40,8 +40,9 @@ members = [
   "denort",
   "deno",
   "embed_deno",
-  "libmainworker_example",
+  # "libmainworker_example",
   "eszip_example",
+  "libmainworker_duplex_stream_example",
 ]
 
 # Required for V8 compatibility - rusty-v8 needs at least -O1 to not miscompile
