add code cache and transpile cache

--- a/deno_component_workspace_example/libmainworker_duplex_stream_example/Cargo.toml
+++ b/deno_component_workspace_example/libmainworker_duplex_stream_example/Cargo.toml
@@ -45,6 +45,7 @@ esbuild_client = "0.7.1"
 eszip = "=0.108.0"
 faster-hex = "0.10.0"
 flate2 = "1.1.9"
+futures = "0.3"
 http = "1.4"
 http-body = "1.0.1"
 http-body-util = "0.1.3"
